--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,36 @@
 {
-    "name": "tomaj/omnipay-vub",
-    "type": "library",
-    "description": "VUB eplatby driver for the Omnipay payment processing library",
-    "keywords": [
-        "eplatby",
-        "vub",
-        "epay",
-        "gateway",
-        "merchant",
-        "omnipay",
-        "pay",
-        "payment"
-    ],
-    "homepage": "https://github.com/tomaj/omnipay-vub",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Tomas Majer",
-            "email": "tomasmajer@gmail.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": { 
-            "Omnipay\\": "src/"
-        }
-    },
-    "require": {
-        "omnipay/common": "~2.0"
-    },
-    "require-dev": {
-        "omnipay/tests": "~2.0"
-    },
-    "scripts": {
-        "test": "phpunit"
-    }
+	"name" : "tomaj/omnipay-vub",
+	"type" : "library",
+	"description" : "VUB eplatby driver for the Omnipay payment processing library",
+	"keywords" : [
+		"eplatby",
+		"vub",
+		"epay",
+		"gateway",
+		"merchant",
+		"omnipay",
+		"pay",
+		"payment"
+	],
+	"homepage" : "https://github.com/tomaj/omnipay-vub",
+	"license" : "MIT",
+	"authors" : [{
+			"name" : "Tomas Majer",
+			"email" : "tomasmajer@gmail.com"
+		}
+	],
+	"autoload" : {
+		"psr-4" : {
+			"Omnipay\\" : "src/"
+		}
+	},
+	"require" : {
+		"omnipay/common" : "~3.0"
+	},
+	"require-dev" : {
+		"omnipay/tests" : "~3.0"
+	},
+	"scripts" : {
+		"test" : "phpunit"
+	}
 }
